# blog-django

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: albums.py  gallery.py  photos.py  posts.py  projects.py
app/core/: config.py
app/crud/: __init__.py  album.py  base.py  gallery.py  photo.py  post.py  project.py
app/db/: base.py  session.py
app/models/: album.py  gallery.py  photo.py  post.py  project.py  tag.py
app/schemas/: album.py  gallery.py  post.py  project.py
app/utils/: file_handlers.py
blog/: settings.py  urls.py
core/: views.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  App.tsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: About.tsx  AlbumDetail.jsx  Blog.tsx  Gallery.jsx  Gallery.tsx  Home.tsx  Projects.tsx  Resume.tsx
frontend/src/services/: api.ts
gallery/: admin.py  models.py  serializers.py  urls.py  views.py
gallery/migrations/: 0001_initial.py
posts/: admin.py  models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py
projects/: admin.py  models.py  serializers.py  views.py
projects/migrations/: 0001_initial.py
resume/: admin.py  models.py  serializers.py  urls.py  views.py
resume/migrations/: 0001_initial.py
